Première intégration Keller
Manque des modifs de labels et la gestion des leds d'activités

--- a/config.ini
+++ b/config.ini
@@ -6,8 +6,8 @@ machineName = "TestMachine"
 password = "746F70"
 debug = TRUE
 
-[capt]
-port = "COM3"
+[PT01]
+port = "COM1"
 baudrate = 9600    
 databits = 8    
 stopbits = 1    
@@ -17,23 +17,20 @@ ascii = 0
 slaveaddress = 17    
 timeout = 1000    
 register = 2    
-maxpressure = 5.000000    
+maxpressure = 5.000000  
 
-[valve]
-port = "COM5"
+[PT02]
+port = "COM2"
 baudrate = 9600    
 databits = 8    
 stopbits = 1    
 parity = 0    
 flowcontrol = 0    
-timeout = 1000    
 ascii = 0    
 slaveaddress = 17    
-inletvalve = 0    
-v1 = 3    
-v2 = 4    
-samplevalve = 2    
-outletvalve = 1    
+timeout = 1000    
+register = 2    
+maxpressure = 5.000000      
 
 [sleeve]
 length = "2,500000E+1"
