--- a/config.ini
+++ b/config.ini
@@ -30,12 +30,24 @@ ascii = 0
 slaveaddress = 17    
 timeout = 1000    
 register = 2    
-maxpressure = 5,000000    
+maxpressure = 5,000000 
 
-[sleeve]
-length = "2,500000E+1"
-diameter = "1,000000E+1"
-thickness = "1,000000E+1"
+[PT03]
+port = "COM2"
+baudrate = 9600    
+databits = 8    
+stopbits = 1    
+parity = 0    
+flowcontrol = 0    
+ascii = 0    
+slaveaddress = 18   
+timeout = 1000    
+register = 2    
+maxpressure = 5,000000   
+
+[FT01]
+
+[FT02] 
 
 [stabilization]
 minimalWait = "1000"
