auto switch capteur checkbox

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ defaultLanguage = "fr"
 languageFile = "lang.csv"
 machineName = "TestMachine"
 password = "746F70"
-debug = TRUE
+debug = FALSE
 
 [PT01]
 port = "COM1"
@@ -20,7 +20,7 @@ register = 2
 maxpressure = 5,000000    
 
 [PT02]
-port = "COM2"
+port = "COM1"
 baudrate = 9600    
 databits = 8    
 stopbits = 1    
@@ -33,7 +33,7 @@ register = 2
 maxpressure = 5,000000 
 
 [PT03]
-port = "COM2"
+port = "COM1"
 baudrate = 9600    
 databits = 8    
 stopbits = 1    
