Correction des seuils pour changement de capteur

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ defaultLanguage = "fr"
 languageFile = "lang.csv"
 machineName = "TestMachine"
 password = "746F70"
-debug = FALSE
+debug = TRUE
 
 [PT01]
 port = "COM1"
