--- a/config.ini
+++ b/config.ini
@@ -4,50 +4,41 @@ defaultLanguage = "fr"
 languageFile = "lang.csv"
 machineName = "TestMachine"
 password = "746F70"
-debug = TRUE
+debug = FALSE
 
 [PT01]
-port = "COM1"
-baudrate = 9600    
-databits = 8    
-stopbits = 1    
-parity = 0    
-flowcontrol = 0    
-ascii = 0    
-slaveaddress = 17    
-timeout = 1000    
-register = 2    
-maxpressure = 5.000000    
+port = 2    
+maxpressure = 0.025000    
+PT01Channel = 0    
+TempChannel = 1    
+HEV01Channel = 3    
+HEV02Channel = 2    
 
 [PT02]
 port = "COM1"
 baudrate = 9600    
-databits = 8    
-stopbits = 1    
-parity = 0    
-flowcontrol = 0    
-ascii = 0    
 slaveaddress = 1    
-timeout = 1000    
-register = 1    
-maxpressure = 5.000000    
+timeout = 500    
+maxpressure = 0.350000    
 
 [PT03]
 port = "COM1"
 baudrate = 9600    
-databits = 8    
-stopbits = 1    
-parity = 0   
-flowcontrol = 0    
-ascii = 0    
-slaveaddress = 17    
-timeout = 1000    
-register = 2    
-maxpressure = 5.000000    
+slaveaddress = 2    
+timeout = 500    
+maxpressure = 3.500000    
 
 [FT01]
+port = 9    
+baudrate = 19200    
+tag = 27294009    
+maxflow = 10.000000    
 
 [FT02] 
+port = 9    
+baudrate = 19200    
+tag = 26662013    
+maxflow = 200.000000    
 
 [stabilization]
 minimalWait = "1000"
